test/tipe-data.test.ts
describe("Data Type", function(){
    it('should must declare', function(){
        let name : string = "Muhammad Bintang";
        let balance : number = 100000;
        let isVip : boolean = true;

        console.info(name);
        console.info(balance);
        console.info(isVip);

        // name = 1; // error
        // balance "1000"; // error
        // isVip = 1; // error

    });
}); 